deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: hello-k8s
          image: k8s-challenge
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
